Confirm functionality for repeat names

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>NHL API Search v1</title>
   </head>
   <body>
     <form id="searchForm">
-      <input type="text" name="" />
+      <input
+        type="text"
+        name=""
+        placeholder="Search any current NHL player by full name"
+      />
       <button type="submit">Submit</button>
     </form>
     <div id="output"></div>
-    <script src="app.js"></script>
+    <script src="app2.js"></script>
   </body>
 </html>
